@@ -1,4 +1,4 @@
 DIST fast-stemmer-1.0.1.gem 11776 SHA256 80a12b655ebc7fb2ce85f031e249691fda88c4c7a7742b8cc0e1db3537906440 SHA512 53a2aca0cddc1ab9233236365b551488275e1776b1261b613b356bf43933056ea75a601a2e1515bf4345dee3c6b50f513aa8539c886f75be47b821a3e70eed2e WHIRLPOOL 50ecce3dc231096ec411ab4f4793086ec8a718713de0f1a1c9ebfa9237831a4af61eed4308f37274c7bb6b3a72125e096985c827b1b8298225959ba890eb7119
-EBUILD fast-stemmer-1.0.1.ebuild 386 SHA256 c3b9d4e256ddd03d95c27b50f8683455d12120da80b8a8305f1df77851281d4f SHA512 77392d4972a6000385183c3859fd1761f4482aeff9ecb2cb508395263b01d246b95145e1cdb5ab7eac47ab9e64bb7f4c9c572239035a4e74b7a20aa94bfc3b1d WHIRLPOOL 4bbe940a2f528faae64650d8505e9ed28c08815f6f5748bc17dc4bf3ea2aed1b80b92f6b824d5e0e9f5d35795a40f8048775be42d82e37d38fd9b0fa8b56ae10
-MISC ChangeLog 300 SHA256 096bfd5b2c52c4de77566aa551826c58f99005288894529769baed56a1a5c1d8 SHA512 e5a0d5cf54bba166bbb3d2d075b2361e2be7c59bfc977d3041863910785257bbf1baf06f505fac87b44dcf9c9b31f01bb06071e37296e67ec53a06023c2772f2 WHIRLPOOL 5bdea3beb545ea97f1f0134d31e2b55d34c9f3f85190e36ef49c511445556e2cca84b5fc5f162f58985e9f57ff4ad094be07cc5fddbc8e392ed5a57a41a23d43
+EBUILD fast-stemmer-1.0.1.ebuild 805 SHA256 245a95d5650434d4d433a6a413e783405d14bd385f5d2304170dda889e96c1b8 SHA512 346cacedcc7db3f57127e94fcdaf453bf15fc7cc5301141ed93657f2a39ee7d70422382e384cf9725cf2515a5d0907198c654e81a4be7c6a1bd8ba676365e0f6 WHIRLPOOL b58418f96e1ccb0f08dbfc73943e3a751f7b61a12950a74a7f47c68ac6f596ec82521227171505fe10de15fb34f4e659daa22956772639f821f666d4cc6b6378
+MISC ChangeLog 442 SHA256 0d9dad9fc8ab33b9256faaeab1f95b59268b3d10f8b758d494fd5b8760dc51d9 SHA512 2ce9bb91423c3cb2dcd7cd28dd1f37ed38886bc8af78fc80d19691911960f661501bb3237b7d44fd0e9ae518c93eae2539415f516c9cd961f39eacabc51a5bbf WHIRLPOOL 3a17d0eb1b2d179825222a80654f05a586f167d837930bd24f5ad5047247d4722d638a0d23ecfd880e0771930cc266d42340acf703d9ae39f93c618e0d5dbaab
 MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
