@@ -1,3 +1,6 @@
+  16 Sep 2012; Manuel Rüger (mrueg) gentoo@rueg.eu fast-stemmer-1.0.1.ebuild:
+  dev-ruby/fast-stemmer: Fixes to the ebuild, compile library
+
   26 Aug 2012; Manuel Rüger (mrueg) gentoo@rueg.eu fast-stemmer-1.0.1.ebuild:
   dev-ruby/fast-stemmer: Drop some ruby targets
 
